--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Devine Website</title>
+    <title>Divine Website</title>
   </head>
   <link rel="shortcut icon" href="./src/assets/images/logo.png" type="image/x-icon">
   <body>
